# thermite-cpp

./: .gitignore  CMakeLists.txt  README.md
cmake/modules/: FindOpus.cmake  FindRapidJSON.cmake  Findcpprestsdk.cmake  Findlibuv.cmake  Findsodium.cmake  FinduWS.cmake  Finduv.cmake
include/: thermite.hpp
include/thermite/: logging.hpp  player.hpp  player_manager.hpp  voice_client.hpp
include/thermite/audio/: transcoder.hpp
include/thermite/discord/: voice_callbacks.hpp  voice_client.hpp  voice_mode.hpp  voice_opcode.hpp
include/thermite/errors/: opus_error.hpp
include/thermite/extra/: pplx_extras.hpp
include/thermite/memory/: memory.hpp  memory_pool.hpp
include/thermite/player/: player_state.hpp
include/thermite/udp/: udp_client.hpp
lib/: CMakeLists.txt  player.cpp
lib/discord/: voice_client.cpp  voice_client_events.cpp  voice_client_impl.cpp  voice_client_impl.hpp
lib/extra/: net_utils.hpp  pplx_extras.cpp
lib/udp/: udp_client.cpp  udp_client_asio.cpp
patches/uWebSockets/: 0001-Use-more-supported-TLS-method-instead.patch
samples/: CMakeLists.txt
samples/cli/: CMakeLists.txt  NOTES  bot.py.in  main.cpp
samples/simple_cli/: CMakeLists.txt  bot.py  main.cpp
src/: CMakeLists.txt  debug.cpp  debug.hpp  socket_hub.cpp  socket_thread.cpp  util.cpp
src/discord/: debug.cpp  heartbeat.cpp  internal.hpp  opcode.cpp  protocol.cpp  udp.cpp  udp_buffer.cpp  udp_internal.hpp  voice_client.cpp  ws_events.cpp
src/errors/: opus_error.cpp
src/formats/: opus.hpp
